# Cubix

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
assets/src-server/: server.properties
cubix/src-deps/semver/: semver.hpp
cubix/src-server/apple/: CMakeLists.txt  main.cpp
cubix/src-server/common/: CMakeLists.txt  DedicatedServer.cpp  DedicatedServer.hpp  PropertiesSettings.cpp  PropertiesSettings.hpp
cubix/src-server/linux/: CMakeLists.txt  main.cpp
cubix/src-server/win/: CMakeLists.txt  main.cpp
cubix/src/apple/: AppPlatform_apple.cpp  AppPlatform_apple.hpp  CMakeLists.txt
cubix/src/common/: AppPlatform.cpp  AppPlatform.hpp  CMakeLists.txt  GameVersion.hpp  SharedConstants.hpp  SubClientId.hpp
cubix/src/common/editor/: WorldType.hpp
cubix/src/common/entity/: PlayerBlockActionData.cpp  PlayerBlockActionData.hpp
cubix/src/common/input/: InputMode.hpp  InteractionModel.hpp  PlayMode.hpp
cubix/src/common/molang/: MolangVersion.hpp
cubix/src/common/nbt/: ByteArrayTag.hpp  ByteTag.hpp  CompoundTag.hpp  CompoundTagVariant.hpp  DoubleTag.hpp  FloatTag.hpp  Int64Tag.hpp  IntArrayTag.hpp  IntTag.hpp  ListTag.hpp  NbtIo.hpp  ShortTag.hpp  StringTag.hpp  Tag.hpp  TagPtr.hpp
cubix/src/common/network/: CompressionType.hpp  ConnectionDefinition.hpp  ConnectionRequest.hpp  GamePublishSetting.hpp  NetherNetServer.cpp  NetherNetServer.hpp  NetworkIdentifier.cpp  NetworkIdentifier.hpp  NetworkPeer.cpp  NetworkPeer.hpp  NetworkServer.hpp  Packet.hpp  PacketIds.hpp  PortPair.hpp  RakNetServer.cpp  RakNetServer.hpp  ServerNetworkHandler.cpp  ServerNetworkHandler.hpp  TransportLayer.hpp
cubix/src/common/network/connection/: CompressionType.hpp  ConnectionRequest.cpp  ConnectionRequest.hpp
cubix/src/common/network/packets/: ActorPickRequestPacket.cpp  ActorPickRequestPacket.hpp  AddPaintingPacket.cpp  AddPaintingPacket.hpp  AnimatePacket.cpp  AnimatePacket.hpp  AvailableCommandsPacket.cpp  AvailableCommandsPacket.hpp  BlockActorDataPacket.cpp  BlockActorDataPacket.hpp  BlockPickRequestPacket.cpp  BlockPickRequestPacket.hpp  ChunkRadiusUpdatedPacket.cpp  ChunkRadiusUpdatedPacket.hpp  ClientCacheStatusPacket.cpp  ClientCacheStatusPacket.hpp  ClientToServerHandshakePacket.cpp  ClientToServerHandshakePacket.hpp  ClientboundCloseFormPacket.cpp  ClientboundCloseFormPacket.hpp  CommandOutputPacket.cpp  CommandOutputPacket.hpp  CommandRequestPacket.cpp  CommandRequestPacket.hpp  ContainerClosePacket.cpp  ContainerClosePacket.hpp  ContainerOpenPacket.cpp  ContainerOpenPacket.hpp  CreativeContentPacket.cpp  CreativeContentPacket.hpp  DisconnectPacket.cpp  DisconnectPacket.hpp  EditorNetworkPacket.cpp  EditorNetworkPacket.hpp  GameRulesChangedPacket.cpp  GameRulesChangedPacket.hpp  InteractPacket.cpp  InteractPacket.hpp  ItemRegistryPacket.cpp  (+81 more)
cubix/src/common/registry/: BlockRegistry.cpp  BlockRegistry.hpp  BlockStateRegistry.cpp  BlockStateRegistry.hpp  CommandRegistry.cpp  CommandRegistry.hpp  ItemGroupRegistry.cpp  ItemGroupRegistry.hpp  ItemRegistry.cpp  ItemRegistry.hpp
cubix/src/common/server/: ChatRestrictionLevel.hpp  PlayerTickPolicy.hpp  ServerInstance.cpp  ServerInstance.hpp  ServerLevel.cpp  ServerLevel.hpp  ServerPlayer.cpp  ServerPlayer.hpp
cubix/src/common/util/: Base64.cpp  Base64.hpp  BigUInt128.cpp  BigUInt128.hpp  BinaryStream.cpp  BinaryStream.hpp  Endianness.hpp  Image.hpp  Json.cpp  Json.hpp  Logger.hpp  StringUtils.cpp  StringUtils.hpp  UUID.cpp  UUID.hpp
cubix/src/common/world/: Difficulty.cpp  Difficulty.hpp  Facing.hpp  GameMode.cpp  GameMode.hpp
cubix/src/linux/: AppPlatform_linux.cpp  AppPlatform_linux.hpp  CMakeLists.txt
cubix/src/win/: AppPlatform_win32.cpp  AppPlatform_win32.hpp  CMakeLists.txt
(+135 files in other folders)
